# rust-monitor

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: gpu.rs  main.rs  metrics.rs  ui.rs
