[package]
name = "rust-monitor"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2021"

[dependencies]
ratatui = "0.20"
crossterm = "0.26"
sysinfo = "0.30"
serde_json = "1.0"
nvml-wrapper = { version = "0.9", optional = true }
clap = { version = "4.3", features = ["derive"] }
log = "0.4"
env_logger = "0.10"

[features]
# Enable with `--features nvml` if you want NVIDIA GPU monitoring (optional)
nvml = ["nvml-wrapper"]
